@@ -35,6 +35,7 @@ Mejorada emulación de Sinclair QL:
 
 Mejorado ZX Vision:
 - Permitir ocultar ventanas minimizadas
+- Permitir ubicar ventanas mas allá de los límites de la ventana principal de ZEsarUX
 - Mostrar, con un punto, cuando un icono es de una ventana abierta pero minimizada
 - Mantener las proporciones de tamaño de la ventana de ZEsarUX (no permitir zoom x/y diferente) por defecto
 - Borrar el cursor al enviar una ventana a segundo plano
